feat(file): enable postgres metadata runtime
